Fix z-index on TextField

--- a/src/components/NavBar/styles.module.scss
+++ b/src/components/NavBar/styles.module.scss
@@ -13,7 +13,7 @@
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 100;
+  z-index: 1;
 
   p {
     display: inline-block;
